# rusttale

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  clippy.yml
docs/: README.md  localization.md
docs/lore/: README.md  tr.md
docs/man/: Makefile  README.md
docs/man/en/man1/: rusttale.1
docs/man/fr/man1/: rusttale.1
docs/man/tr/man1/: rusttale.1
docs/md/: README.md
docs/md/en/: README.md
docs/md/tr/: README.md
docs/the_lore/: .gitignore  Makefile  README.md  build.sh
docs/the_lore/en/: main.tex
docs/the_lore/en/chapters/: 00-intro.tex  01-structure.tex  02-story.tex
docs/the_lore/en/chapters/01_foundation/: main.tex  mechanics.tex  meta.tex  time.tex
docs/the_lore/en/chapters/02_entities/: consciousness.tex  enemies.tex  main.tex  npcs.tex
docs/the_lore/en/chapters/03_locations/: key_locations.tex  main.tex  regions.tex
docs/the_lore/en/chapters/04_events/: canon.tex  endings.tex  main.tex  (+1 more)
docs/the_lore/fr/: main.tex
docs/the_lore/fr/chapters/: 00-intro.tex  01-structure.tex  02-story.tex
docs/the_lore/theme/: general.sty
docs/the_lore/tr/: main.tex
docs/the_lore/tr/chapters/: 01-structure.tex
locales/: part_one.rs
resources/: build.sh
resources/icon/: SOURCES.txt
resources/image/: SOURCES.txt
resources/level/: base.json  rusttale.ogmo
resources/music/: README.md  SOURCES.txt
src/: main.rs
src/game/: defaults.rs  helpers.rs  mod.rs  state.rs
src/locales/: part_one.rs
src/mivs/: README.md
src/utils/: clap.rs
xtask/resources/: Cargo.toml  README.md
xtask/resources/src/: main.rs  resources.rs
(+23 files in other folders)
