[package]
name = "rusttale"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
tetra = "0.9.1"
ogmo3 = "0.1.1"

[workspace]
members = ["xtask/resources"]

[profile.dev]
opt-level = 0
debug = 1
codegen-units = 256

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
